@@ -1,5 +1,6 @@
 from 1.8.1 to 1.8.2
 - lots of voip type casting fixes
+- context aware stack options
 
 from 1.8.0 to 1.8.1
 - expose stack contexts directly to plugins
